[package]
name = "Apple_Quality_Analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.202", features = ["derive", "serde_derive"] }